# dissertation-refactoring-spcf

./: .gitignore  CHANGELOG.md  CITATION.cff  Notes  README.md  cabal.project.local  dissertation-refactoring-spcf.cabal  evaluation-metrics.ipynb  new_inj  proj.inj  tuple-form
.github/workflows/: haskell.yml
app/: BoundedSPCF.hs  Main.hs  SPCF.hs  STLC.hs
evaluation/: evaluation-metrics.ipynb
notes/: proj.inj
programs/: program.spcf  test.spcf
src/: BoundedASPCF.hs  BoundedSPCF.hs  BoundedSPCFTypes.hs  MonadicExample.hs  PCF.hs  SPCF.hs  SPCFConsts.hs  SPCFTypes.hs  STLC.hs  SimpleExample.hs
src/BoundedSPCF/: AST.hs  AffineTransformation.hs  ChurchEncoding.hs  Evaluation.hs  TermManipulation.hs  Types.hs
src/Frontend/: Lexer.x  Parser.y
src/SPCF/: AST.hs  AffineTransformation.hs  Constants.hs  Evaluation.hs  Interpreter.hs  TermManipulation.hs  Types.hs
src/Utils/: Environment.hs
test/: ASPCFFragmentSpec.hs  BoundedASPCFFragmentSpec.hs  BoundedSPCFSpec.hs  BoundedSPCFTypesSpec.hs  Main.hs  MonadicExampleSpec.hs  PCFSpec.hs  ProductSpec.hs  SPCFHelpersSpec.hs  SPCFSpec.hs  SPCFTermManipulationSpec.hs  SimpleExampleSpec.hs
