cabal-version:   3.4
name:            dissertation-refactoring-spcf
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
maintainer:      52382074+jayrabjohns@users.noreply.github.com
author:          Jay Rabjohns
build-type:      Simple
tested-with: GHC == { 9.8.1 }
extra-doc-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        PCF
        SPCF
        SPCFConsts
        BoundedSPCF
        BoundedASPCF
        STLC

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.19 && <4.20,
        containers >= 0.6 && <0.7,
        mtl >= 2.3 && <2.4

executable dissertation-refactoring-spcf
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.19 && <4.20,
        dissertation-refactoring-spcf

test-suite dissertation-refactoring-spcf-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        SPCFSpec
        BoundedSPCFSpec
        BoundedASPCFFragmentSpec

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.19 && <4.20,
        HUnit >=1.6 && <1.7,
        containers >= 0.6 && <0.7,
        mtl >= 2.3 && <2.4,
        dissertation-refactoring-spcf