cabal-version:   3.4
name:            dissertation-refactoring-spcf
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
maintainer:      52382074+jayrabjohns@users.noreply.github.com
author:          Jay Rabjohns
build-type:      Simple
tested-with: GHC == { 9.8.1 }
extra-doc-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        PCF
        SPCF
        SPCFTypes
        -- SPCFConsts
        BoundedSPCF
        BoundedSPCFTypes
        BoundedASPCF
        STLC
        Frontend.Lexer 
        Frontend.Parser

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.19 && <4.20,
        containers >= 0.7 && < 0.8,
        mtl >= 2.3 && <2.4,
        array,
        parsec

executable spcf
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.19 && <4.20,
        dissertation-refactoring-spcf
    build-tool-depends: 
        happy:happy >= 1.20,
        alex:alex >= 3.5

test-suite dissertation-refactoring-spcf-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        -- SPCFSpec
        BoundedSPCFSpec
        BoundedSPCFTypesSpec
        BoundedASPCFFragmentSpec
        ProductSpec

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.19 && <4.20,
        HUnit >=1.6 && <1.7,
        containers >= 0.7 && <0.8,
        mtl >= 2.3 && <2.4,
        dissertation-refactoring-spcf